--- a/client/src/Styles/styles.css
+++ b/client/src/Styles/styles.css
@@ -1,69 +1,3 @@
-.datePersonale {
-    position: relative;
-    width: 300px;
-    height: 50%;
-    margin-top: 50%;
-
-
-    font-family: 'Inria Serif';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    /* identical to box height */
-
-}
-.situatieScolara {
-    position: relative;
-    width: 300px;
-    height: 50%;
-    margin-top: 50%;
-
-
-    font-family: 'Inria Serif';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    /* identical to box height */
-
-}
-.situatieScolaraClick {
-    color: #ffffff;
-    font-family: 'Inria Serif';
-    font-style: normal;
-    font-size: 20px;
-    margin-top: 48%;
-    /*margin-left: 10%;*/
-    border-left: 5px solid white;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 10%;
-    transform: scale(1.1);
-}
-
-
-.datePersonaleClick {
-    color: #ffffff;
-    font-family: 'Inria Serif';
-    font-style: normal;
-    font-size: 20px;
-    margin-top: 45%;
-    /*margin-left: 10%;*/
-    border-left: 5px solid white;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 10%;
-    transform: scale(1.1);
-}
-
-.navBar {
-    position: absolute;
-    width: 20%;
-    height: 100%;
-    background: rgba(187, 24, 29, 0.95);
-}
-
 .rectangleLogin {
     min-width: 300px;
     min-height: 500px;
@@ -76,16 +10,6 @@
     left: 40%;
     right: 30%;
 }
-
-.linkDash {
-    text-decoration: none;
-    color: #D1D5DB;
-}
-.linkDash:hover {
-    text-decoration: none;
-    color: #D1D5DB;
-}
-
 .link {
     color: #D1D5DB;}
 .link:hover {
@@ -122,12 +46,14 @@
     right: 5%;
 }
 
-.bg {
+html, body {
+    margin:0;
+    height:100vh;
     background-image: url("background.png");
-    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 .logoLoginRectangle{
     min-width: 10%;
